<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoaViagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Campos do layout login.xml -->
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticao">Usuário ou senha inválidos</string>

    <!-- ícones do dashborad - dashboard.xml -->

    <string name="novo_gasto">Gasto</string>
    <string name="nova_viagem">Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>

    <!-- Campos do layout viagem.xml -->

    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data Chegada</string>
    <string name="data_da_saida">Data Saída</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descricao</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

</resources>